--- a/SabiHelpersGithub/Base.lproj/Main.storyboard
+++ b/SabiHelpersGithub/Base.lproj/Main.storyboard
@@ -28,26 +28,27 @@
                                     <action selector="makeRotation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="g0C-yh-KpD"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="...values..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C1s-sn-VIY">
-                                <rect key="frame" x="0.0" y="646" width="375" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="...values..." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="TMk-ZI-ITX">
+                                <rect key="frame" x="0.0" y="376" width="375" height="291"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="C1s-sn-VIY" secondAttribute="trailing" id="AXw-nA-kIk"/>
+                            <constraint firstItem="TMk-ZI-ITX" firstAttribute="top" secondItem="l6r-BK-pPl" secondAttribute="bottom" id="2we-QH-uIf"/>
+                            <constraint firstItem="TMk-ZI-ITX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4gd-E4-F4D"/>
                             <constraint firstItem="l6r-BK-pPl" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="JC7-DE-uXx"/>
                             <constraint firstItem="l6r-BK-pPl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="OBl-wJ-Ztc"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="C1s-sn-VIY" secondAttribute="bottom" id="c7O-iz-uTx"/>
-                            <constraint firstItem="C1s-sn-VIY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="e4v-GD-ax7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="TMk-ZI-ITX" secondAttribute="bottom" id="XrR-C5-G5B"/>
                             <constraint firstItem="l6r-BK-pPl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="lfG-lI-Nmt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TMk-ZI-ITX" secondAttribute="trailing" id="vTN-r8-VWB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="valuesLabel" destination="C1s-sn-VIY" id="2Hi-gl-IdV"/>
+                        <outlet property="valuesTextView" destination="TMk-ZI-ITX" id="3LS-Ir-SsX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
